# qna-chrome-extension-using-bert

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  template.py
chrome-extension/productQnA/: index.html  manifest.json  popup.js
notebooks/: qna.ipynb
src/: main.py  model.py
