[project]
name = "qna-chrome-extension-using-bert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.13",
    "ipykernel>=6.29.5",
    "langchain>=0.3.25",
    "langchain-ollama>=0.3.3",
    "matplotlib>=3.10.3",
    "mlflow>=3.1.0",
    "nltk>=3.9.1",
    "pandas>=2.3.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "streamlit>=1.46.0",
    "torch>=2.7.1",
    "transformers>=4.52.4",
    "uvicorn>=0.34.3",
    "wordcloud>=1.9.4",
]
